src/objects/n2de__Distribution_log__c.object
<CustomObject>
    <description>Distribution logs</description>
    <fields>
        <fullName>n2de__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distribution logs</relationshipLabel>
        <relationshipName>Distribution_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Action_date__c</fullName>
        <label>Last action date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Actions_complete__c</fullName>
        <label>Actions complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Alert_tip__c</fullName>
        <label>Alert tip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Assigned_object_Id__c</fullName>
        <label>Assigned object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Assigned_object_id_index__c</fullName>
        <externalId>true</externalId>
        <label>Assigned object id index</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Assigned_object_record_name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Assignment_date__c</fullName>
        <label>Assignment date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Distribution logs</relationshipLabel>
        <relationshipName>Distribution_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Distribution logs</relationshipLabel>
        <relationshipName>Distribution_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Day__c</fullName>
        <formula>DAY( DATEVALUE(n2de__Assignment_date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Detail_message__c</fullName>
        <description>Used to store extra info about the specific assignment, to be used on the distribution log page in tooltips.</description>
        <label>Detail message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_Team__c</fullName>
        <formula>n2de__Distributor__r.n2de__Team__r.Name</formula>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_number__c</fullName>
        <description>What number assignment this is of the particular record. Only available for lead, opportunity, contact, account and case assignments.</description>
        <label>Distribution number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_sequence__c</fullName>
        <label>Distribution sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_team_member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team member</label>
        <referenceTo>n2de__Team_member__c</referenceTo>
        <relationshipLabel>Distribution logs</relationshipLabel>
        <relationshipName>Distribution_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>n2de__Distributor__c</referenceTo>
        <relationshipLabel>Distribution logs</relationshipLabel>
        <relationshipName>Distribution_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor_name__c</fullName>
        <label>Distributor name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor_schedule_log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor schedule log</label>
        <referenceTo>n2de__Distributor_schedule_log__c</referenceTo>
        <relationshipLabel>Distribution logs (Schedule log)</relationshipLabel>
        <relationshipName>Distribution_schedule_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Email_notifications_disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable standard email notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Error_message__c</fullName>
        <label>Error message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__In_alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__In_error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_alert_enabled_log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert is enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_last_action_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last action complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassigned_to_queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_sticky__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is sticky</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_substitute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is substitute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_action_sequence__c</fullName>
        <label>Last action sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Last_alert_date__c</fullName>
        <label>Last alert date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_alert_sequence__c</fullName>
        <label>Last alert sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Distribution logs</relationshipLabel>
        <relationshipName>Distribution_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Distribution logs</relationshipLabel>
        <relationshipName>Distribution_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>N.B: List page usage only, no data populated</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Distribution_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Reassigned_to_id__c</fullName>
        <label>Re-assigned to id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Reassignment_date__c</fullName>
        <label>Reassignment date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Reject_log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution reject log</label>
        <referenceTo>n2de__Distribution_reject_log__c</referenceTo>
        <relationshipLabel>Distribution logs</relationshipLabel>
        <relationshipName>Distribution_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Status_on_assignment__c</fullName>
        <description>Object status at the point of assignment (before any status update)</description>
        <label>Status on assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Sticky_creator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sticky creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Time_to_action_mins__c</fullName>
        <inlineHelpText>The time taken between this object being distributed to a team member and being actioned, in minutes.</inlineHelpText>
        <label>Time to action mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Distribution log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>